feat: parcel, bootstrap initial, and using mdx for layouts

--- a/source-files/index.mdx
+++ b/source-files/index.mdx
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Cloud Product Development and Product Management by Ping Poet Products
+title: YEAH BABY!
 ---
 
-import { Card } from "./components/card.jsx"
+import Card from "./components/card.jsx"
 
 Ping Poet Products is a consulting firm that specializes in **Product Management** and **Software Development** to take cloud-based products from idea to delivery to customers.
 
@@ -14,25 +14,24 @@ Ping Poet Products is a consulting firm that specializes in **Product Management
 </Card>
 
 <Card heading="Define">
-  We have extensive experience working with prospects, customers, and executives
-  to capture a vision for a new product or feature.
+  We work with prospects, customers, and executives to capture a vision for a
+  new product or feature.
 </Card>
 
 <Card heading="Validate">
-  We have work with stakeholders to validate the vision internally, and then
-  with customers or prospects using carefully crafted surveys and interviews to
-  ensure that the right product gets build.
+  We work with stakeholders to validate the vision internally, and then with
+  customers or prospects using carefully crafted surveys and interviews to
+  ensure that the right product is built.
 </Card>
 
 <Card heading="Develop">
-  Once wWe have extensive experience in Software Development to ensure that the
-  code is
+  We are passionate Software Developers and ensure that the product is built
+  right.
 </Card>
 
 <Card heading="Maintain">
-  We can help you set up your cloud application so that it continues to work
-  smoothly as you add more and more customers while minimizing ongoing
-  operational work. We also can be on-call to operate it for you so you can
-  maximize uptime and minimize your teams time on upgrades, maintenance and
-  deployments.
+  We ensure that your cloud application continues to work smoothly with minimal
+  opertional load as you add customers. From being on-call, to upgrades, to
+  deployments, we help you maximize uptime and minimize your teams' time
+  operations.
 </Card>
