--- a/source-files/test-hello-world.mdx
+++ b/source-files/test-hello-world.mdx
@@ -2,7 +2,7 @@
 title: Foo Title
 layout: default
 ---
-import { Card } from "./components/card.jsx"
+import Card from "./components/card.jsx"
 
 export const Thing = () => <>World</>
 
