fix: content updates

--- a/source-files/consulting/how-we-do-it.mdx
+++ b/source-files/consulting/how-we-do-it.mdx
@@ -3,11 +3,19 @@ title: How Do Consulting – Ping Poet Products
 layout: features
 features:
   - title: How we work
-    description: List, Act, and Advise are the high level attributes that we embody everyday in our work.
+    description: >
+      We work with you and your team closely to turn your vision into action.
+      We can mentor your team, augment your team, or be your team and work atonomously to develop your product.
+      *Listen*, *Act*, and *Advise* are the attributes that we embody everyday in our work.
   - title: Listen
-    description: We work with you to take your initial idea from discussions, anecdotes, and vision to break it down into actionable tasks that a team of engineers – yours our ours – can start working on.
+    description: >
+      We work with you to take your initial idea from discussions, anecdotes, and vision to break it down into actionable tasks that a team of engineers - yours our ours - can start working on.
   - title: Act
-    description:  We make things happen. We move quickly, and iterate with frequent demonstrations of progress to you, and if you want, to *your* customers. We live by the [Agile Manifesto's](https://agilemanifesto.org/)  _Working software over comprehensive documentation over processes and tools._ 
+    description: >
+      We make things happen. We move quickly, and iterate with frequent demonstrations of progress to you, and if you want, to your customers. 
+      We live by the [Agile Manifesto's](https://agilemanifesto.org/)  _Working software over comprehensive documentation over processes and tools._ 
   - title: Advise
-    description: We use 20+ years of experience working with customers and technology to give you advice on how to move forward. From advising on how to validate your ideas with customers, to understanding their feedback, to how to implement it most rapidly and in a way you can maintain, our expertise is at your service.
+    description: >
+      We use 20+ years of experience working with customers and technology to give you advice on how to move forward.
+      From advising on how to validate your ideas with customers, to understanding their feedback, to how to implement it most rapidly and in a way you can maintain, our expertise is at your service.
 ---
