--- a/source-files/consulting/what-we-do.mdx
+++ b/source-files/consulting/what-we-do.mdx
@@ -5,11 +5,19 @@ features:
   - title: What We Do
     description: We provide experienced Product Management and Software Development expertise that is needed to take cloud-based products from idea to delivery to customers.
   - title: Define
-    description:  We work with prospects, customers, and executives to capture a vision for a new product or feature.
+    description: >
+      This phase is all about making sure that the right product is built.
+      We work with prospects, customers, and executives to capture a vision for a new product or feature.
+      During this phase we can mentor by providing Product Management Leadership while your team learns and defines the product, or we can take on the Product Management for you.
   - title: Validate
-    description: We work with stakeholders to validate the vision internally, and then with customers or prospects using carefully crafted surveys and interviews to ensure that the right product is built.
-  - title: Develop
-    description: We are passionate Software Developers and ensure that the product is built right.
+    description: >
+      We work with stakeholders to articulate the vision internally, and use a concise written narative to make sure everyone is aligned.
+      Then we can work with customers or prospects to validate the product vision using carefully crafted surveys and/or interviews to ensure that building starts off on the right track.
+  - title: Build
+    description: >
+      This phase is all about making sure that the product is built right.
+      We focus on getting new features to market fast by deliverying incremental essential value to customers along the way.
+      We also are familiar with updating existing large code bases where customers expect things to be familiar and have the highest level of quality.
   - title: Maintain
     description: We ensure that your cloud application continues to work smoothly with minimal opertional load as you add customers. From being on-call, to upgrades, to deployments, we help you maximize uptime and minimize your teams' time operations.
 ---
