--- a/source-files/index.mdx
+++ b/source-files/index.mdx
@@ -26,7 +26,8 @@ import Card from "./components/card.jsx"
 </Card>
 
 <Card heading="How">
-  blah blah blah
+  We work with you and your team closely to turn your vision into action _fast_.
+  We can mentor your team, augment your team, or be your team and work atonomously to develop your product.
   <ul className="icon-list ps-0">
     <li className="d-flex align-items-start mb-1">
       See <a href="/consulting/how-we-do-it">How we do it</a> for more.
