fix: render markdown on features layout page
how-we-do-it has an example of failed render

--- a/source-files/_includes/layouts/features.mdx
+++ b/source-files/_includes/layouts/features.mdx
@@ -23,7 +23,7 @@ export const Features = ({ features }) => {
         <hr className="col-3 col-md-2 mb-5" />
     <div className="row g-5">
       {others.map((feature) => (
-        <Card heading={feature.title} key={feature.title}>{feature.description}</Card>
+        <Card headingMarkdown={feature.title} key={feature.title} childrenMarkdown={feature.description} />
       ))}
     </div>
 
