--- a/source-files/consulting/how-we-do-it.mdx
+++ b/source-files/consulting/how-we-do-it.mdx
@@ -13,7 +13,7 @@ features:
   - title: Act
     description: >
       We make things happen. We move quickly, and iterate with frequent demonstrations of progress to you, and if you want, to your customers. 
-      We live by the [Agile Manifesto's](https://agilemanifesto.org/)  _Working software over comprehensive documentation over processes and tools._ 
+      We live by the [Agile Manifesto's](https://agilemanifesto.org/) _Working software over comprehensive documentation._ 
   - title: Advise
     description: >
       We use 20+ years of experience working with customers and technology to give you advice on how to move forward.
