fix: add a suggest an edit link to footer

--- a/source-files/_includes/layouts/default.mdx
+++ b/source-files/_includes/layouts/default.mdx
@@ -12,11 +12,11 @@ import SiteFooter from "./siteFooter.jsx"
   <body>
     <div className="col-lg-8 mx-auto p-4 py-md-5">
 
-      <SiteHeader />
+      <SiteHeader {...props} />
 
       <main dangerouslySetInnerHTML={{ __html: props.content }} />
 
-      <SiteFooter />
+      <SiteFooter {...props} />
 
     </div>
 
