--- a/source-files/consulting/who-we-are.mdx
+++ b/source-files/consulting/who-we-are.mdx
@@ -50,7 +50,7 @@ Director of Product Management at Smartsheet. He also led Engineering as a Senio
 Director of Engineering at Smartsheet, and eventually a GM of both Product Management
 and Software Engineering for the core Platform and Enterprise capabilties. Scott
 thrives in deeply technical projects, with a natural ability to transition from complex
-design and coding tasks at a Principle Engineer level to VP-level product strategy
+design and coding tasks at a Principal Engineer level to VP-level product strategy
 conversations with the executive team.
 
 Scott's leadership skills include coaching teams and managers to become independent leaders of leaders, agile and lean processes, customer interviewing, user testing, go-to-market planning and execution, roadmap creation, product definition and writing, verbal communication and presentation skill development.
