--- a/source-files/index.mdx
+++ b/source-files/index.mdx
@@ -14,7 +14,7 @@ import Card from "./components/card.jsx"
 <div className="row g-5">
 
 <Card heading="What">
-  Want a new SaaS/Cloud product? We can help help you define and develop your
+  Want a new SaaS/Cloud product? We can help you define and develop your
   product or feature from idea, to customer validation, to the development and
   launch of the product.
   <ul className="icon-list ps-0">
@@ -25,8 +25,8 @@ import Card from "./components/card.jsx"
 </Card>
 
 <Card heading="How">
-  We work with you and your team closely to turn your vision into action _fast_.
-  We can mentor your team, augment your team, or be your team and work atonomously to develop your product.
+  We work closely with you and your team to turn your vision into action _fast_.
+  We can mentor your team, augment your team, or we can _be_ your team and work autonomously to develop your product.
   <ul className="icon-list ps-0">
     <li className="d-flex align-items-start mb-1">
       See <a href="/consulting/how-we-do-it">How we do it</a> for more.
@@ -44,7 +44,7 @@ import Card from "./components/card.jsx"
 </Card>
 
 <Card heading="Contact Us 🤙">
-  Drop us a note discuss your engagement.
+  Drop us a note to discuss your engagement.
   <ul className="icon-list ps-0">
     <li className="d-flex align-items-start mb-1">
       <a href="/contact">Contact Us</a>
