fix: content edits

--- a/source-files/consulting/how-we-do-it.mdx
+++ b/source-files/consulting/how-we-do-it.mdx
@@ -5,7 +5,7 @@ features:
   - title: How we work
     description: >
       We work with you and your team closely to turn your vision into action.
-      We can mentor your team, augment your team, or be your team and work atonomously to develop your product.
+      We can mentor your team, augment your team, or be your team and work autonomously to develop your product.
       *Listen*, *Act*, and *Advise* are the attributes that we embody everyday in our work.
   - title: Listen
     description: >
