--- a/source-files/consulting/what-we-do.mdx
+++ b/source-files/consulting/what-we-do.mdx
@@ -11,12 +11,12 @@ features:
       During this phase we can mentor by providing Product Management Leadership while your team learns and defines the product, or we can take on the Product Management for you.
   - title: Validate
     description: >
-      We work with stakeholders to articulate the vision internally, and use a concise written narative to make sure everyone is aligned.
+      We work with stakeholders to articulate the vision internally, and use a concise written narrative to make sure everyone is aligned.
       Then we can work with customers or prospects to validate the product vision using carefully crafted surveys and/or interviews to ensure that building starts off on the right track.
   - title: Build
     description: >
       This phase is all about making sure that the product is built right.
-      We focus on getting new features to market fast by deliverying incremental essential value to customers along the way.
+      We focus on getting new features to market fast by delivering incremental essential value to customers along the way.
       We also are familiar with updating existing large code bases where customers expect things to be familiar and have the highest level of quality.
   - title: Maintain
     description: We ensure that your cloud application continues to work smoothly with minimal opertional load as you add customers. From being on-call, to upgrades, to deployments, we help you maximize uptime and minimize your teams' time operations.
