--- a/source-files/consulting/who-we-are.mdx
+++ b/source-files/consulting/who-we-are.mdx
@@ -48,7 +48,7 @@ roles. As a natural leader, he gravitated towards formal leadership roles in Eng
 and Product Management. He served four years leading Product Managers as a Senior
 Director of Product Management at Smartsheet. He also led Engineering as a Senior
 Director of Engineering at Smartsheet, and eventually a GM of both Product Management
-and Software Engineering for the core Platform and Enterprise capabilties. Scott
+and Software Engineering for the core Platform and Enterprise capabilities. Scott
 thrives in deeply technical projects, with a natural ability to transition from complex
 design and coding tasks at a Principal Engineer level to VP-level product strategy
 conversations with the executive team.
@@ -57,7 +57,7 @@ Scott's leadership skills include coaching teams and managers to become independ
 
 Scott's software engineering and design skills include JavaScript/TypeScript, Node.js, Docker, Kubernetes, React, C# & .NET, microservices, AWS, DevOps, setting up operational maturity including on-call rotations, telemetry and alerting, automated testing and deployments, CI/CD, and more.
 
-Outside of work Scott spends time with his young kids, hiking in the woods, and mountaineering including summits of [Mount Rainier](https://peakbagger.com/climber/Ascent.aspx?aid=1854749) and [Mount Baker](https://peakbagger.com/climber/ascent.aspx?aid=2027709) in Washington.
+Outside of work Scott spends time with his young kids, hiking in the woods, and mountaineering including summits of <a href="https://peakbagger.com/climber/Ascent.aspx?aid=1854749" target="_blank">Mount Rainier</a> and <a href="https://peakbagger.com/climber/ascent.aspx?aid=2027709" target="_blank">Mount Baker</a> in Washington.
 
 You can learn more about Scott from some of his online profiles below:
 
