fix: cookie policy; misc styling updates

--- a/source-files/policy/privacy.mdx
+++ b/source-files/policy/privacy.mdx
@@ -54,6 +54,9 @@ You can enable or disable location services when you use our Service at any time
 
 #### Tracking & Cookies Data
 
+www.pingpoet.com does not use cookies at this time. We may begin using cookies in the future and in the event that we do so we will update our Privacy Policy.
+
+{/*
 We use cookies and similar tracking technologies to track the activity on
 our Service and we hold certain information.
 
@@ -66,6 +69,7 @@ Examples of Cookies we use:
 - **Session Cookies.** We use Session Cookies to operate our Service.
 - **Preference Cookies.** We use Preference Cookies to remember your preferences and various settings.
 - **Security Cookies.** We use Security Cookies for security purposes.
+*/}
 
 ## Use of Data
 
