fix: add SEO og/twitter semantic tags

--- a/source-files/consulting/what-we-do.mdx
+++ b/source-files/consulting/what-we-do.mdx
@@ -1,5 +1,6 @@
 ---
 title: What Consulting we do – Ping Poet Products
+description: Ping Poet Products provides experienced Product Management and Software Development expertise that is needed to take cloud-based products from idea to delivery to customers.
 layout: features
 features:
   - title: What We Do
