--- a/source-files/index.mdx
+++ b/source-files/index.mdx
@@ -6,7 +6,7 @@ import Card from "./components/card.jsx"
 
 <p className="fs-5 col-md-8 mb-5">
   **Product Management** and **Software
-  Development** consulting to take cloud-based products from idea to delivery to customers.
+  Development** consulting to take cloud-based products from idea to customers.
 </p>
 
 <hr className="col-3 col-md-2 mb-5" />
