--- a/source-files/index.mdx
+++ b/source-files/index.mdx
@@ -4,9 +4,17 @@ layout: default
 
 import Card from "./components/card.jsx"
 
-<p className="fs-5 col-md-8 mb-5">
-  **Product Management** and **Software
-  Development** consulting to take cloud-based products from idea to customers.
+<p className="fs-5 col-md-8">
+  # **Product Management** and **Software Development** Consulting Looking for a
+  hand building a new app or feature in the cloud? Want a seasoned developer to
+  join your dev team and break through some heavy lifting in the code? Want
+  someone to help clarify your idea in a way that will unleash your dev team to
+  start delivering?
+  <div className="mb-5">
+    <a className="btn btn-primary btn-lg px-4" href="/contact">
+      Give us a call 🤙
+    </a>
+  </div>
 </p>
 
 <hr className="col-3 col-md-2 mb-5" />
@@ -14,9 +22,9 @@ import Card from "./components/card.jsx"
 <div className="row g-5">
 
 <Card heading="What">
-  Want a new SaaS/Cloud product? We can help you define and develop your
-  product or feature from idea, to customer validation, to the development and
-  launch of the product.
+  Want a new SaaS/Cloud product? We can help you define and develop your product
+  or feature from idea, to customer validation, to the development and launch of
+  the product.
   <ul className="icon-list ps-0">
     <li className="d-flex align-items-start mb-1">
       See <a href="/consulting/what-we-do">What We Do</a> for more.
@@ -26,7 +34,8 @@ import Card from "./components/card.jsx"
 
 <Card heading="How">
   We work closely with you and your team to turn your vision into action _fast_.
-  We can mentor your team, augment your team, or we can _be_ your team and work autonomously to develop your product.
+  We can mentor your team, augment your team, or we can _be_ your team and work
+  autonomously to develop your product.
   <ul className="icon-list ps-0">
     <li className="d-flex align-items-start mb-1">
       See <a href="/consulting/how-we-do-it">How we do it</a> for more.
@@ -39,15 +48,6 @@ import Card from "./components/card.jsx"
   <ul className="icon-list ps-0">
     <li className="d-flex align-items-start mb-1">
       See <a href="/consulting/who-we-are">Who we are</a> to learn more.
-    </li>
-  </ul>
-</Card>
-
-<Card heading="Contact Us 🤙">
-  Drop us a note to discuss your engagement.
-  <ul className="icon-list ps-0">
-    <li className="d-flex align-items-start mb-1">
-      <a href="/contact">Contact Us</a>
     </li>
   </ul>
 </Card>
