fix: remove paragraph in cta button

--- a/source-files/index.mdx
+++ b/source-files/index.mdx
@@ -11,9 +11,7 @@ import Card from "./components/card.jsx"
   someone to help clarify your idea in a way that will unleash your dev team to
   start delivering?
   <div className="mb-5">
-    <a className="btn btn-primary btn-lg px-4" href="/contact">
-      Give us a call 🤙
-    </a>
+    <a className="btn btn-primary btn-lg px-4" href="/contact">Give us a call 🤙</a>
   </div>
 </p>
 
