fix: format wrapping in index cta; add contact to footer; make footer lighter

--- a/source-files/index.mdx
+++ b/source-files/index.mdx
@@ -5,13 +5,12 @@ layout: default
 import Card from "./components/card.jsx"
 
 <p className="fs-5 col-md-8">
-  # **Product Management** and **Software Development** Consulting Looking for a
-  hand building a new app or feature in the cloud? Want a seasoned developer to
-  join your dev team and break through some heavy lifting in the code? Want
-  someone to help clarify your idea in a way that will unleash your dev team to
-  start delivering?
+  # **Product Management** and **Software Development** Consulting
+  {/* NOTE: be careful about wrapping here. new lines are significant */}
+  Looking for a hand building a new app or feature in the cloud?
+  Want a seasoned developer to join your dev team and break through some heavy lifting in the code? Want someone to help clarify your idea in a way that will unleash your dev team to start delivering?
   <div className="mb-5">
-    <a className="btn btn-primary btn-lg px-4" href="/contact">Give us a call 🤙</a>
+    <a className="btn btn-primary btn-lg px-4" href="/contact">Work With Us</a>
   </div>
 </p>
 
