fix: fix styled bullets in lists

--- a/source-files/consulting/recommendations/from-dave-manningsmith-product-management-consortium.mdx
+++ b/source-files/consulting/recommendations/from-dave-manningsmith-product-management-consortium.mdx
@@ -1,5 +1,5 @@
 ---
-title: Recommendation from Dave Manningsmith of Product Management Consortium
+title: Dave Manningsmith of Product Management Consortium Recommendation
 description: Dave Manningsmith recommends Scott Willeke, consultant at Ping Poet Products based on their work together at Product Management Consortium.
 layout: recommendation
 recommended:
