--- a/source-files/consulting/recommendations/from-smartsheet-adam-overton.mdx
+++ b/source-files/consulting/recommendations/from-smartsheet-adam-overton.mdx
@@ -1,5 +1,5 @@
 ---
-title: Recommendation from Adam Overton of Smartsheet
+title: Adam Overton of Smartsheet Recommendation
 description: Adam Overton recommends Scott Willeke of Ping Poet Products based on their work together at Smartsheet.
 layout: recommendation
 recommended:
