fix: add typeform to privacy policy

--- a/source-files/policy/privacy.mdx
+++ b/source-files/policy/privacy.mdx
@@ -1,11 +1,12 @@
 ---
 layout: default
 title: Ping Poet Products, LLC Privacy Policy
+date: git Last Modified # see https://www.11ty.dev/docs/dates/
 ---
 
 # Privacy & Cookies Policy
 
-Effective date: September 1, 2022
+Effective date: { props.page.date }
 
 Ping Poet Products, LLC ("us", "we", or "our") operates the https://www.pingpoet.com website (hereinafter referred to as the "Service").
 
@@ -54,7 +55,7 @@ You can enable or disable location services when you use our Service at any time
 
 #### Tracking & Cookies Data
 
-www.pingpoet.com does not use cookies at this time. We may begin using cookies in the future and in the event that we do so we will update our Privacy Policy.
+www.pingpoet.com does not use cookies at this time. We may begin using cookies in the future and in the event that we do so, we will update our Privacy Policy.
 
 {/*
 We use cookies and similar tracking technologies to track the activity on
@@ -164,6 +165,8 @@ We may employ third party companies and individuals to facilitate our Service ("
 
 These third parties have access to your Personal Data only to perform these tasks on our behalf and are obligated not to disclose or use it for any other purpose.
 
+{/*
+
 ### Analytics
 
 We may use third-party Service Providers to monitor and analyze the use of our
@@ -192,8 +195,10 @@ Their Privacy Policy can be viewed at https://stripe.com/us/privacy
 Their Privacy Policy can be viewed at https://www.paypal.com/webapps/mpp/ua/privacy-full
 
 ### Other
+*/}
 
-<table style={{ margin: "1em 0" }}>
+
+<table class="table">
   <thead>
     <tr>
       <th>Third Party Service/ Vendor</th>
@@ -204,10 +209,10 @@ Their Privacy Policy can be viewed at https://www.paypal.com/webapps/mpp/ua/priv
   </thead>
   <tbody>
     <tr>
-      <td>Auth0</td>
-      <td>Identity Management</td>
-      <td>USA</td>
-      <td>https://auth0.com</td>
+      <td>Typeform</td>
+      <td>Forms</td>
+      <td>Spain</td>
+      <td>https://www.typeform.com</td>
     </tr>
   </tbody>
 </table>
