fix: warning in build due to missing react key

--- a/source-files/consulting/recommendations/list.mdx
+++ b/source-files/consulting/recommendations/list.mdx
@@ -12,7 +12,7 @@ export const RecoList = (props) => {
       {
         props.collections.all
           .filter((page) => page.url.startsWith('/consulting/recommendations/') && (!page.url.startsWith('/consulting/recommendations/list')))
-          .map((page) => <li className="d-flex mb-1"><a href={page.url}>{page.data.title}</a></li>)
+          .map((page) => <li key={page.url} className="d-flex mb-1"><a href={page.url}>{page.data.title}</a></li>)
       }
     </ul>
   )
