--- a/source-files/consulting/recommendations/from-smartsheet-adam-overton.mdx
+++ b/source-files/consulting/recommendations/from-smartsheet-adam-overton.mdx
@@ -21,3 +21,5 @@ recommender:
 The last two years our team has delivered the bulk of features headlining Smartsheet's first two annual user conferences. A tremendous amount of credit goes to Scott for identifying the mission and vision, and then translating that into well defined capabilities the development team can deliver. His customer empathy, industry research, user studies, and collaboration with every contributing team to this effort has been central to our success.
 
 Scott's technical background has helped us make great technical trade offs that still meet the business objectives. This is true both from defining what we build and delving in together on how we build it, but also recognizing when we need to work on operational issues or other technical debt. And when it comes to operational issues, there have been times when we got paged and Scott was the one to figure out first what was going wrong and what we might do with it even though he wasn't a part of writing any of the code, but just from his experience building and operating products based on a service oriented architecture (SOA).
+
+Additionally, Scott kept in tune with the larger software creation organization, what it needed to improve, how information and measurements flowed, and provided insights as to what steps we might take to help. These insights enabled his own team as well as those of his peers and colleagues at all levels to engage in continuous improvement on how they operated, reported, and performed.
