fix: add cloudflare, github to privacy Service Providers

--- a/source-files/policy/privacy.mdx
+++ b/source-files/policy/privacy.mdx
@@ -163,14 +163,13 @@ You have the right to complain to a Data Protection Authority about our collecti
 
 We may employ third party companies and individuals to facilitate our Service ("Service Providers"), provide the Service on our behalf, perform Service-related services or assist us in analyzing how our Service is used.
 
-These third parties have access to your Personal Data only to perform these tasks on our behalf and are obligated not to disclose or use it for any other purpose.
+These third parties may have access to your Personal Data only to perform these tasks on our behalf and are obligated not to disclose or use it for any other purpose.
 
 {/*
 
 ### Analytics
 
-We may use third-party Service Providers to monitor and analyze the use of our
-Service.
+We may use third-party Service Providers to monitor and analyze the use of our Service.
 
 #### Mixpanel
 
@@ -213,6 +212,18 @@ Their Privacy Policy can be viewed at https://www.paypal.com/webapps/mpp/ua/priv
       <td>Forms</td>
       <td>Spain</td>
       <td>https://www.typeform.com</td>
+    </tr>
+    <tr>
+      <td>Cloudflare</td>
+      <td>Web Analytics, site security.</td>
+      <td>San Francisco, CA, USA</td>
+      <td>https://www.cloudflare.com</td>
+    </tr>
+    <tr>
+      <td>Github</td>
+      <td>Site hosting</td>
+      <td>San Francisco, CA, USA</td>
+      <td>https://github.com</td>
     </tr>
   </tbody>
 </table>
