fix: add layout for  Technology Product Leadership Roundtable

--- a/source-files/technology-product-leadership-roundtable/index.mdx
+++ b/source-files/technology-product-leadership-roundtable/index.mdx
@@ -1,3 +1,6 @@
+---
+layout: default
+---
 # Technology Product Leadership Roundtable
 
 Every 6 weeks (?) in the Seattle area we get together for a few hours with a small invited group of Director+ leaders in Software Engineering & Product Management roles building products in the cloud to discuss topics of interest.
