--- a/content/index.mdx
+++ b/content/index.mdx
@@ -49,4 +49,13 @@ import Card from "./components/card.jsx"
   </ul>
 </Card>
 
+<Card heading="Projects 💼">
+  We've worked on a wide variety of projects. Here are a few of them.
+  <ul className="icon-list ps-0">
+    <li className="d-flex align-items-start mb-1">
+      See <a href="/projects">Our Projects</a>
+    </li>
+  </ul>
+</Card>
+
 </div>
